# QBlockChainNotes

./: LICENSE  README.md  学习计划表.txt  招聘企业.docx
BTC系山寨币/: 1.LTC对接文档.md  2.BCH对接文档.md  3.BSV对接文档.md  4.DASH对接文档.md  5.关于BTC系硬分叉导致的无效区块解决方法.md  6.关于BSV交易签名的问题.md  7.编译BSV源码(v1.0.1).md
C++/C++WithPy37/: README.md
C++/CMake/cmake_demos/demo3/: CMakeLists.txt  README.md
C++/CMake/cmake_demos/demo3/include/: printer.h
C++/CMake/cmake_demos/demo4/: CMakeLists.txt  README.md
C++/CMake/cmake_demos/demo5/: CMakeLists.txt  README.md
C++/CMake/cmake_demos/demo5/src/: main.cc  printer.cc
C++/CMake/cmake_demos/demo6/: CMakeLists.txt  README.md
C++/CMake/cmake_demos/demo7/: CMakeLists.txt  README.md
C++/CMake/cmake_demos/demo7/cmake/: Findprinter_install_lib.cmake
C++/Notes/: 快速掌握一门语言的百分之五十的方法.md
C++/bugs/: linux_core_dump使用.md  一个LIBEAY32.dll错误导致程序崩溃的问题.md
C++/moderncpp/: 1_1_despreated.cpp  2_1_constexpr.cpp  2_1_nullptr.cpp  2_2_if_switch.cpp  2_2_initialize_list_constuctor.cpp  2_2_tupe_return.cpp  2_3_decltype_auto.cpp  2_3_trailing_return_type.cpp  2_4_if_constexpr.cpp  2_5_using.cpp  2_5_variadic_template_args.cpp  2_6_enumclass.cpp  2_6_oo.cpp  3_1_lambda.cpp  3_2_function.cpp  3_3_move.cpp  4_1_array.cpp  4_2_unordermap.cpp  4_3_any.cpp  4_3_tuple_variant.cpp  4_3_variant.cpp  5_1_shared_ptr.cpp  6_1_regex.cpp  7_1_future.cpp  7_2_async.cpp  7_4_condition_variable.cpp  7_5_boost_lockfree_queue.cpp  test_boost_thread.cpp
Cosmos/: README.md
Cosmos/1-地址生成/: 1-Cosmos地址生成.md  usdp_addr_gen.py
Cosmos/2-交易签名/: htdf_transfer.py
Docker/: README.md
EOS/: ECDSA签名算法的数学基础.md  EOS对接文档.md  EOS签名分析.md  README.md
EOS/addressbook/: addressbook.abi  addressbook.cpp  addressbook.wasm
EOS/eosio.token/: eosio.token.abi
Go语言/Go语言基础/: README.md
Hyperledger/: 0-Fabric架构理解.md  1-Fabric环境搭建.md  2-编写链码helloworld.md  3-弹珠资产管理项目本地安装.md  4-Chaincode理解.md  5-自己实现弹珠管理项目.md  6-投票系统实现和部署.md  README.md
Monero/: 2_XMR的技术概念.md  3_XMR地址生成.md  4_XMR交易过程.md  6_XMR交易所对接方案.md  7_MoneroGUIWallet发送交易源码分析.md  README.md  ~$$提币流程.~vsdx  地址生成流程图.vsdx  提币流程.vsdx  离线签名操作步骤.md  离线签步骤.xx
Nodejs/: README.md
Polkadot/: README.md
Python3/: README.md  pika消费者退出.md
Solitidy/: README.md
USDT/: 1-USDT介绍.md  2-USDT裸交易创建与签名.md  3.USDT关于支付手续费的UTXO顺序问题研究.md
以太坊/: 1-以太坊私钥公钥地址生成.md  2.以太坊离线签名.md  3.ERC20接币记录.md  4.ERC20查询操作.md  5.发行自己的ERC20代币.md  6.ERC20合约调用.md  7.ETC对接.md  8.ETH踩坑记__交易池.md  8.深入理解ETH交易池.md  README.md  eth_addr.py
其他主流币/: Tron充提币技术实现方案.md  XLM对接文档.md  XRP对接文档.md
区块链理论/: README.md
比特币/: 1-搭建比特币测试网络testnet.md  2-比特币全节点搭建.md  3-比特币对接文档.md  4-比特币私钥公钥地址生成.md  5.交易和区块__比特币源码.md  6.共识__比特币源码.md  7.libbitcoin安装和使用.md  8.merkle_tree.md  README.md  比特币通用API服务.md
项目/: README.md  main.cpp
高级数据结构和算法/: AVLTree.md  BinarySearchTree.md  Graph.md  RBTree.md  README.md  Trie.md
(+1008 files in other folders)
